--- a/public/Backend/assets/css/style.css
+++ b/public/Backend/assets/css/style.css
@@ -1354,7 +1354,7 @@
 }
 
 .bd-order {
-    background-color: #a14206 !important;
+    background-color: #c24c02 !important;
     color: #ffffff;
 }
 
