--- a/public/Frontend/assets/css/style.css
+++ b/public/Frontend/assets/css/style.css
@@ -230,8 +230,8 @@ ol {
 
 .site {
 	color: #ffffff;
-	background: #0d6efd;
-	border: 1px solid #0d6efd;
+	background: #6d7977;
+	border: 1px solid #6d7977;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
